--- a/build.gradle
+++ b/build.gradle
@@ -17,5 +17,6 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.slf4j:slf4j-api:1.7.28'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
