--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,5 @@
-logging.level:
-  root: INFO
-  com.xujie.serverinfo: DEBUG
+logging:
+  file: logs/system-info.log
+  level:
+    root: INFO
+    com.xujie.serverinfo: DEBUG
