--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,12 @@ repositories {
 	mavenCentral()
 	maven { url 'https://repo.spring.io/snapshot' }
 	maven { url 'https://repo.spring.io/milestone' }
+	maven { url 'https://repo.spring.io/plugins-release/' }
+	maven { url 'https://repo.spring.io/libs-release/' }
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'com.splunk.logging:splunk-library-javalogging:1.6.2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
