--- a/deployment.yml
+++ b/deployment.yml
@@ -18,5 +18,7 @@ spec:
           env:
             - name: SPLUNK_HOST
               value: 192.168.1.77
+            - name: USER_HOST
+              value: system-info-container
           ports:
             - containerPort: 8080
