--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: system-info
+  name: system-info-service
 spec:
   selector:
       app: system-info
@@ -10,4 +10,3 @@ spec:
       protocol: TCP
       port: 80
       targetPort: 8080
-  type: LoadBalancer
