--- a/k8s.yml
+++ b/k8s.yml
@@ -35,22 +35,23 @@ spec:
   ports:
     - name: http
       protocol: TCP
-      port: 80
+      port: 8080
       targetPort: 8080
+  type: LoadBalancer
 
----
+#---
 
-apiVersion: extensions/v1beta1
-kind: Ingress
-metadata:
-  name: system-info-ingress
-  annotations:
-    ingress.kubernetes.io/rewrite-target: /
-spec:
-  rules:
-    - http:
-        paths:
-          - path: /
-            backend:
-              serviceName: system-info-service
-              servicePort: 80
+#apiVersion: extensions/v1beta1
+#kind: Ingress
+#metadata:
+#  name: system-info-ingress
+#  annotations:
+#    ingress.kubernetes.io/rewrite-target: /
+#spec:
+#  rules:
+#    - http:
+#        paths:
+#          - path: /
+#            backend:
+#              serviceName: system-info-service
+#              servicePort: 80
